--- a/platformio.ini
+++ b/platformio.ini
@@ -29,7 +29,7 @@ extra_configs               = platformio_tasmota32.ini
 platform                    = ${core.platform}
 platform_packages           = ${core.platform_packages}
 framework                   = arduino
-board                       = esp8266_1M
+board                       = esp32s2
 board_build.filesystem      = littlefs
 custom_unpack_dir           = unpacked_littlefs
 build_unflags               = ${core.build_unflags}
@@ -117,6 +117,7 @@ build_flags                 = ${esp_defaults.build_flags}
 [core]
 ; *** Esp8266 Tasmota modified Arduino core based on core 2.7.4. Added Backport for PWM selection
 platform                    = https://github.com/tasmota/platform-espressif8266/releases/download/2023.04.00/platform-espressif8266.zip
+# platform                    = https://github.com/tasmota/platform-espressif32/releases/download/2023.05.00/platform-espressif32.zip
 platform_packages           =
 build_unflags               = ${esp_defaults.build_unflags}
 build_flags                 = ${esp82xx_defaults.build_flags}
